@@ -15,6 +15,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.OutputStream;
 import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
@@ -23,6 +24,7 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Iterator;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -34,6 +36,7 @@ import org.slf4j.LoggerFactory;
 public class NetworkUtil {
     private static final Logger LOGGER = LoggerFactory.getLogger(NetworkUtil.class);
 
+    private static final String UTF_8 = "UTF-8";
     private static final int MAX_REDIRECTS = 3;
 
     private NetworkUtil() {
@@ -60,14 +63,44 @@ public class NetworkUtil {
     public static InputStream getUrlInputStream(URLConnection urlConnection) throws StreamIOException {
         return getUrlInputStream(urlConnection, null);
     }
-    
-    public static InputStream getUrlInputStream(URLConnection urlConnection, Map<String, String> headers) throws StreamIOException {
-        return getUrlInputStream(urlConnection,headers, StringUtil.getInt(System.getProperty("UrlConnectionTimeout"), 5000), //$NON-NLS-1$
+
+    public static InputStream getUrlInputStream(URLConnection urlConnection, Map<String, String> headers)
+        throws StreamIOException {
+        return getUrlInputStream(urlConnection, headers,
+            StringUtil.getInt(System.getProperty("UrlConnectionTimeout"), 5000), //$NON-NLS-1$
             StringUtil.getInt(System.getProperty("UrlReadTimeout"), 15000)); //$NON-NLS-1$
     }
 
-    public static InputStream getUrlInputStream(URLConnection urlConnection, Map<String, String> headers, int connectTimeout, int readTimeout)
+    public static InputStream getUrlInputStream(URLConnection urlConnection, Map<String, String> headers,
+        int connectTimeout, int readTimeout) throws StreamIOException {
+        prepareConnection(urlConnection, headers, connectTimeout, readTimeout, false);
+        try {
+            return urlConnection.getInputStream();
+        } catch (IOException e) {
+            throw new StreamIOException(e);
+        }
+
+    }
+
+    public static OutputStream getUrlOutputStream(URLConnection urlConnection, Map<String, String> headers)
         throws StreamIOException {
+        return getUrlOutputStream(urlConnection, headers,
+            StringUtil.getInt(System.getProperty("UrlConnectionTimeout"), 5000), //$NON-NLS-1$
+            StringUtil.getInt(System.getProperty("UrlReadTimeout"), 15000)); //$NON-NLS-1$
+    }
+
+    public static OutputStream getUrlOutputStream(URLConnection urlConnection, Map<String, String> headers,
+        int connectTimeout, int readTimeout) throws StreamIOException {
+        prepareConnection(urlConnection, headers, connectTimeout, readTimeout, true);
+        try {
+            return urlConnection.getOutputStream();
+        } catch (IOException e) {
+            throw new StreamIOException(e);
+        }
+    }
+
+    private static void prepareConnection(URLConnection urlConnection, Map<String, String> headers, int connectTimeout,
+        int readTimeout, boolean post) throws StreamIOException {
         if (headers != null && headers.size() > 0) {
             for (Iterator<Entry<String, String>> iter = headers.entrySet().iterator(); iter.hasNext();) {
                 Entry<String, String> element = iter.next();
@@ -76,39 +109,43 @@ public class NetworkUtil {
         }
         urlConnection.setConnectTimeout(connectTimeout);
         urlConnection.setReadTimeout(readTimeout);
+        urlConnection.setDoInput(true);
+        if (post) {
+            urlConnection.setDoOutput(true);
+        }
         if (urlConnection instanceof HttpURLConnection) {
             HttpURLConnection httpURLConnection = (HttpURLConnection) urlConnection;
             try {
-                int code = httpURLConnection.getResponseCode();
-                if (code < HttpURLConnection.HTTP_OK || code >= HttpURLConnection.HTTP_MULT_CHOICE) {
-                    if (code == HttpURLConnection.HTTP_MOVED_TEMP || code == HttpURLConnection.HTTP_MOVED_PERM
-                        || code == HttpURLConnection.HTTP_SEE_OTHER) {
-                        return getRedirectionStream(httpURLConnection, headers);
-                    }
+                if (post) {
+                    httpURLConnection.setRequestMethod("POST"); //$NON-NLS-1$
+                } else {
+                    int code = httpURLConnection.getResponseCode();
+                    if (code < HttpURLConnection.HTTP_OK || code >= HttpURLConnection.HTTP_MULT_CHOICE) {
+                        if (code == HttpURLConnection.HTTP_MOVED_TEMP || code == HttpURLConnection.HTTP_MOVED_PERM
+                            || code == HttpURLConnection.HTTP_SEE_OTHER) {
+                            applyRedirectionStream(httpURLConnection, headers);
+                            return;
+                        }
 
-                    LOGGER.warn("http Status {} - {}", code, httpURLConnection.getResponseMessage());// $NON-NLS-1$ //$NON-NLS-1$
+                        LOGGER.warn("http Status {} - {}", code, httpURLConnection.getResponseMessage());// $NON-NLS-1$ //$NON-NLS-1$
 
-                    // Following is only intended LOG more info about Http Server Error
-                    if (LOGGER.isTraceEnabled()) {
-                        writeErrorResponse(httpURLConnection);
+                        // Following is only intended LOG more info about Http Server Error
+                        if (LOGGER.isTraceEnabled()) {
+                            writeErrorResponse(httpURLConnection);
+                        }
+                        throw new StreamIOException(httpURLConnection.getResponseMessage());
                     }
-                    throw new StreamIOException(httpURLConnection.getResponseMessage());
                 }
             } catch (StreamIOException e) {
                 throw e;
             } catch (IOException e) {
-                LOGGER.error("http response: {}", e.getMessage()); //$NON-NLS-1$
                 throw new StreamIOException(e);
             }
         }
-        try {
-            return urlConnection.getInputStream();
-        } catch (IOException e) {
-            throw new StreamIOException(e);
-        }
     }
 
-    public static InputStream getRedirectionStream(URLConnection urlConnection, Map<String, String> headers) throws IOException {
+    public static void applyRedirectionStream(URLConnection urlConnection, Map<String, String> headers)
+        throws IOException {
         String redirect = urlConnection.getHeaderField("Location"); //$NON-NLS-1$
         for (int i = 0; i < MAX_REDIRECTS; i++) {
             if (redirect != null) {
@@ -126,13 +163,12 @@ public class NetworkUtil {
                 break;
             }
         }
-        return urlConnection.getInputStream();
     }
 
     private static void writeErrorResponse(HttpURLConnection httpURLConnection) throws IOException {
         InputStream errorStream = httpURLConnection.getErrorStream();
         if (errorStream != null) {
-            try (InputStreamReader inputStream = new InputStreamReader(errorStream, "UTF-8"); //$NON-NLS-1$
+            try (InputStreamReader inputStream = new InputStreamReader(errorStream, StandardCharsets.UTF_8); //$NON-NLS-1$
                             BufferedReader reader = new BufferedReader(inputStream)) {
                 StringBuilder stringBuilder = new StringBuilder();
                 String line;
@@ -151,7 +187,7 @@ public class NetworkUtil {
     public static String buildHttpParamsString(Map<String, String> params) {
         return params.entrySet().stream().map(e -> {
             try {
-                return URLEncoder.encode(e.getKey(), "UTF-8") + "=" + URLEncoder.encode(e.getValue(), "UTF-8"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+                return URLEncoder.encode(e.getKey(), UTF_8) + "=" + URLEncoder.encode(e.getValue(), UTF_8); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
             } catch (UnsupportedEncodingException e1) {
                 throw new IllegalArgumentException(e1);
             }
